<package format="3">
  <name>mobile_manipulator</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for mobile_manipulator</p>
    <p>This package contains configuration data, 3D models and launch files
for mobile_manipulator robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>