<?xml version="1.0"?>
<package format="3">
  <name>tracer_msgs</name>
  <version>0.3.3</version>
  <description>Messages for AgileX Tracer</description>

  <author email="contact@westonrobot.com">TODO</author>

  <maintainer email="contact@westonrobot.com">TODO</maintainer>
  <maintainer email="contact@westonrobot.com">TODO</maintainer>

  <license>BSD</license>

  <url type="website">TODO</url>
  <url type="bugtracker">TODO</url>
  <url type="repository">TODO</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <!-- <build_depend>std_msgs</build_depend> -->
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- <exec_depend>std_msgs</exec_depend> -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <run_depend>message_runtime</run_depend> -->
  <!-- <run_depend>std_msgs</run_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
