<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracer_slam</name>
  <version>2.4.0</version>
  <description>
     This package provides a sped up improved slam karto with updated SDK and visualization and modification toolsets
  </description>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>LGPL</license>
  <author>Steve Macenski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
