<package format="2">
  <name>tracer_with_lidar</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for tracer_with_lidar</p>
    <p>This package contains configuration data, 3D models and launch files
for tracer_with_lidar robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <depend>roslaunch</depend> -->
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>urdf</depend>

  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <!-- <exec_depend>gazebo</exec_depend> -->
  <!-- <depend>tracer_with_lidar</depend> -->
  <!-- <exec_depend>architecture_independent</exec_depend> -->
  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>